# SOD_CHO

./: .gitignore  CMakeCache.txt  CMakeLists.txt  ICME 2016 - Ver006.tex  Makefile  README.md  SOD_CHO  basefunction.h  cluster.h  clusterAnalysis.h  clusterImage.h  clusteranalysis.h  clusterimage.h  comman.cpp  comman.h  convexhull.h  cutobj.cpp  cutobj.h  depth.h  evaluate.cpp  evaluate.h  graph.h  layers.h  main.cpp  merge.h  multilayer.cpp  multilayer.h  ncut.cpp  ncut.h  overlap.h  pyramid.cpp  pyramid.h  relation.h  retarget.h  saliency.cpp  saliency.h  segment.cpp  segment.h  segmentation.h  smoothImage.h  (+6 more)
scripts/: cmp.py
unused/: figure_ground.h  graph.h  layers_unused.h  quantize.h  relation_unused.h  spectral_unused.h  type_tarjan_unused.h
